# listpack-studio

./: .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
apps/agent/: .env.example  Dockerfile  README.md  pyproject.toml  server.py
apps/agent/compliance/: __init__.py  engine.py  loader.py  object_detection.py  ocr.py  registry.py  schemas.py
apps/agent/compliance/detectors/: __init__.py  background_color.py  border_detection.py  category_forbidden_text.py  color_space.py  file_format.py  file_size.py  halo_edge.py  object_count.py  person_in_image.py  pixel_dimension.py  product_fill_ratio.py  shadow_intensity.py  text_in_image.py
apps/agent/compliance/fixers/: __init__.py  compress.py  convert_color_space.py  convert_format.py  crop_to_fill_ratio.py  registry.py  resize.py  smooth_halo_edges.py  whiten_background.py
apps/agent/compliance/rules/: __init__.py  amazon.py  categories.py  ebay.py  seed.py  shein.py  shopify.py  temu.py
apps/agent/generators/: __init__.py  a_plus.py  banner.py  c2pa_stamper.py  cache.py  image_executor.py  platform_adapter.py
apps/agent/graphs/: __init__.py  hello.py
apps/agent/graphs/listing_pack/: __init__.py  critic.py  graph.py  nodes.py  planner.py  state.py
apps/agent/models/: __init__.py  base.py  catalog.py  cost.py  exceptions.py  router.py  sparkcode_client.py
apps/agent/observability/: __init__.py  langfuse_handler.py  logger.py  sentry.py
apps/agent/runtime/: __init__.py  brand_kit.py  checkpointer.py  hitl.py  listing_pack_runner.py  outputs.py  persistence.py  quota.py  storage.py
apps/agent/scene_spec/: __init__.py  compiler.py  executor.py  schemas.py
apps/agent/schemas/: __init__.py  errors.py  hello.py  sse.py
apps/agent/tests/: conftest.py
apps/agent/tests/compliance/: test_detectors.py  test_fixers.py  test_object_detectors.py  test_ocr_detectors.py  test_pixel_detectors.py  test_seed.py
apps/agent/tests/fixtures/: build.py
apps/agent/tests/generators/: test_a_plus.py  test_banner.py  test_c2pa_real_signing.py  test_c2pa_stamper.py  test_image_executor.py  test_platform_adapter.py
apps/agent/tests/graphs/: conftest.py  test_a_plus_banner_dag.py  test_critic.py  test_listing_pack.py  test_planner.py
apps/agent/tests/models/: conftest.py  test_router.py
apps/agent/tests/observability/: test_logger.py
apps/agent/tests/runtime/: conftest.py  test_checkpointer.py  test_hitl.py  (+5 more)
(+180 files in other folders)
